# repo-data-factory

./: README.md
data/: scenario1.draft.jsonl
repo-data-factory/: README.md  llm.sh  pyproject.toml
repo-data-factory/data/: scenario1.enriched.jsonl  scenario2.draft.jsonl  scenario2.enriched.jsonl
repo-data-factory/src/repo_data_factory/: repo_scan.py  train.sh  train_sft.py  utils.py
repo-data-factory/src/repo_data_factory.egg-info/: PKG-INFO
repo-data-factory/src/repo_data_factory/llm/: client.py
repo-data-factory/src/repo_data_factory/pipelines/: scenario1_rules.py  scenario2_llm.py  scenario2_rules.py
repo-data-factory/src/repo_data_factory/rules/: __init__.py  common.py  scenario2.py
src/repo_data_factory/: types.py
src/repo_data_factory.egg-info/: SOURCES.txt  top_level.txt
src/repo_data_factory/pipelines/: scenario1_llm.py
src/repo_data_factory/rules/: scenario1.py
work/S2AND/: pyproject.toml
work/S2AND/s2and/: data.py  featurizer.py  model.py
