[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-data-factory"
version = "0.1.0"
description = "Rule+LLM training data factory for repository QA/design tasks"
requires-python = ">=3.9"
dependencies = ["tqdm", "requests"]

[tool.setuptools.packages.find]
where = ["src"]
